--- a/src/OpcAlarmServer/OpcAlarmServer.csproj
+++ b/src/OpcAlarmServer/OpcAlarmServer.csproj
@@ -13,6 +13,9 @@
     <None Update="Opc.Ua.MyServer.Config.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="ScriptConfiguration.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
