--- a/src/OpcAlarmServer/ScriptConfiguration.json
+++ b/src/OpcAlarmServer/ScriptConfiguration.json
@@ -23,7 +23,7 @@
   "script": {
     "waitUntilStartInSeconds": 10,
     "stepsInLoop": true,
-    "runningForSecounds": 6000,
+    "runningForSeconds": 6000,
     "steps": [
       {
         "event": {
