first test work

--- a/src/OpcAlarmServer/OpcAlarmServer.csproj
+++ b/src/OpcAlarmServer/OpcAlarmServer.csproj
@@ -16,6 +16,9 @@
     <None Update="ScriptConfiguration.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="xml\vendingmachines.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
