--- a/src/OpcAlarmServer/OpcAlarmServer.csproj
+++ b/src/OpcAlarmServer/OpcAlarmServer.csproj
@@ -16,6 +16,9 @@
     <None Update="ScriptConfiguration.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="xml\SimpleEvents - Copy.NodeSet2.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="xml\SimpleEvents.NodeSet2.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
