--- a/src/OpcAlarmServer/ScriptConfiguration.json
+++ b/src/OpcAlarmServer/ScriptConfiguration.json
@@ -54,9 +54,9 @@
   "script": {
     // This enable to have a waiting period before the replay starts
     "waitUntilStartInSeconds": 10,
-    // Enable if the script should be executed in a loop (false is not implemented yet)
-    "stepsInLoop": false,
-    // How long the test should execute (not implemented)
+    // Enable if the script should be executed in a loop
+    "isScriptInRepeatingLoop": false,
+    // How long the test should execute
     "runningForSeconds": 360,
     // The steps
     // Two types of steps exist:
